--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -277,6 +277,47 @@ p {
     background-color: #FFFFFF;
 }
 
+textarea {
+    resize: none;
+}
+
+.form {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 40px;
+}
+
+.form .title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    
+    color: var(--title-text-color);
+
+    margin-bottom: 12px;
+}
+
+.form-field {
+    
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+}
+
+.form-field input {
+    margin: 0;
+    padding: 11px 12px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px
+}
+
+.form-field label {
+    margin-bottom: 4px;
+}
+
 button {
     border: 0;
     font-family: inherit;
