--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -248,6 +248,7 @@ p {
     left: 50%;
 
     width: 528px;
+    padding: 40px;
     
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -278,13 +279,21 @@ p {
 
 
 .form {
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 40px;
+    width: 100%;  
 }
 
-.form .title {
+.form-modal-icon {
+    position:absolute;
+    bottom: 11px;
+    left: 12px;
+}
+
+.form-input:focus + .form-modal-icon {
+    fill: #2196F3;
+}
+
+.form-title {
+    display: block;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
@@ -297,18 +306,19 @@ p {
 }
 
 .form-field {
-    
+    position: relative;
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
 }
 
-.form-field input {
+.form-input {
     margin: 0;
     padding: 11px 12px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px
 }
+
 
 .form-field label {
     margin-bottom: 4px;
