--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -213,6 +213,44 @@ p {
     text-transform: uppercase;
 }
 
+button {
+    border: 0;
+    font-family: inherit;
+}
+
+.button {
+    color: var(--title-text-color);
+    background-color: var(--primary-white-color);
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+
+    cursor: pointer;
+}
+
+.button.primary {
+    padding: 10px 32px;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+    color: var(--primary-white-color);
+    background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.9;
+
+    cursor: pointer;
+
+    transition: background-color var(--timing-function);
+}
+
+.button.primary:hover,
+.button.primary:focus {
+    color: var(--primary-white-color);
+    background-color: var(--accent-bg-hover-color);
+}
+
 .backdrop {
     position: fixed;
     top: 0;
@@ -277,92 +315,104 @@ p {
     background-color: #FFFFFF;
 }
 
+.modal-icon-close {
+    transition: fill var(--timing-function);
+}
+
+.modal-btn:hover .modal-icon-close,
+.modal-btn:focus .modal-icon-close {
+    fill: var(--accent-color);
+}
+
 
 .form {
     width: 100%;
+}
+
+.form-field,
+.form-field-comment,
+.form-field-checkbox {
+    display: block;
+}
+
+.form-field {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.form-modal-input {
+    margin: 0;
+    width: 100%;
+    padding: 11px 12px;
+    padding-left: 42px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+
+    outline: transparent;
+
+    transition: border-color var(--timing-function);
 }
 
 .form-modal-icon {
     position: absolute;
     bottom: 11px;
     left: 12px;
+
+    transition: fill var(--timing-function);
 }
 
-.form-input:focus+.form-modal-icon {
+.form-modal-input:focus+.form-modal-icon {
     fill: #2196F3;
 }
 
-.form-title {
+.form-modal-input:focus {
+    border-color: #2196F3;
+}
+
+.form-modal-title {
     display: block;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
-
+    
     color: var(--title-text-color);
 
     margin-bottom: 12px;
 }
 
-.form-field {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-}
-
-.form-input {
-    margin: 0;
-    padding: 11px 12px;
-    padding-left: 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px
-}
-
-
-.form-field label {
+.form-modal-label {
+    display: block;
     margin-bottom: 4px;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
+
+    color: var(--primary-text-color)
 }
 
-.form-field.comment {
+.form-field-comment {
     margin-bottom: 20px;
 }
 
-.form-field .comment {
-    padding: 14px 16px;
+.modal-comment {
+    width: 100%;
+    padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px
+    border-radius: 4px;
+
+    outline: transparent;
+    
+    transition: border-color var(--timing-function);
 }
 
-.form-field.checkbox {
-    margin-bottom: 30px;
+.modal-comment:focus {
+    border-color: #2196F3;
 }
 
-
-
-.form-field.checkbox {
-    margin-bottom: 30px;
-}
-
-
-
-.form-field.checkbox label {
-    margin-bottom: 0;
-
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-}
-
-
-
-.form textarea::placeholder {
+.form-field-comment .modal-comment::placeholder {
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -372,46 +422,114 @@ p {
 
 textarea {
     resize: none;
+    outline: transparent;
 }
 
-button {
-    border: 0;
-    font-family: inherit;
+.form-field-checkbox {
+    margin-bottom: 30px;
 }
 
+.form-field-checkbox {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
 
-.button {
-    color: var(--title-text-color);
-    background-color: var(--primary-white-color);
+.form-field-checkbox {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
+    margin-bottom: 30px;
+}
+
+.checkbox-description {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    
+    color: #757575;
+}
+
+.custom-checkbox {
+    width: 16px;
+    height: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-right: 7px;
+    border: 2px solid #212121;
+    border-radius: 2px;
+
+    transition: background-color var(--timing-function),
+                border-color var(--timing-function);
+}
+
+.custom-checkbox-icon {
+    opacity: 0;
+
+    transition: opacity var(--timing-function);
+}
+
+.checkbox:checked+.custom-checkbox .custom-checkbox-icon {
+    opacity: 1;
+}
+
+.checkbox:checked+.custom-checkbox {
+    background-color: #2196F3;
+    border-color: #2196F3;
+
+}
+
+.checkbox {
+    -webkit-appearence: none;
+    -moz-appearance: none;
+
+    appearance: none
+}
+
+.form-field-btn {
+    display: flex;
+    justify-content: center;
+}
+
+.form-modal-btn {
+    width: 200px;
+    height: 50px;
+    
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.9;
-
-    cursor: pointer;
-}
-
-.button.primary {
-    padding: 10px 32px;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-
+    line-height: 1.88;
+        
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    
     color: var(--primary-white-color);
-    background-color: var(--accent-color);
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.9;
+
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
 
     cursor: pointer;
 
     transition: background-color var(--timing-function);
 }
 
-.button.primary:hover,
-.button.primary:focus {
+.form-modal-btn:focus,
+.form-modal-btn:hover {
     color: var(--primary-white-color);
     background-color: var(--accent-bg-hover-color);
 }
+
+.form-modal-link {
+   color: #2196F3;
+}
+
 
 .rules {
     display: flex;
