--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -925,6 +925,89 @@ img {
     align-items: baseline;
 }
 
+.footer-subscription {
+    display: block;
+    margin-left: 93px;
+}
+
+.form-footer {
+    display: flex;
+}
+
+.form-footer-title {
+    display: block;
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+        
+    color: #FFFFFF;
+}
+
+.form-footer-input {
+    width: 358px;
+    padding: 15px 16px;
+    margin-right: 12px;
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+
+    background-color: transparent;
+
+    outline: transparent;
+}
+
+.form-footer-field .form-footer-input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+       
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.03em;
+    
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.form-footer-btn {
+    padding-top: 10px;
+    padding-right: 28px;
+    padding-bottom: 10px;
+    padding-left: 29px;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    color: var(--primary-white-color);
+
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    cursor: pointer;
+
+    transition: background-color var(--timing-function);
+}
+
+.form-footer-btn:hover,
+.form-footer-btn:focus {
+    color: var(--primary-white-color);
+    background-color: var(--accent-bg-hover-color);
+}
+
+.form-footer-icon {
+    margin-left: 10px;
+}
 
 /* Портфолио */
 
