--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -343,6 +343,7 @@ button {
 .form-modal-input {
     margin: 0;
     width: 100%;
+    height: 40px;
     padding: 11px 12px;
     padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -353,11 +354,15 @@ button {
     transition: border-color var(--timing-function);
 }
 
+.field-icon {
+    position: relative;
+}
+
 .form-modal-icon {
     position: absolute;
-    bottom: 11px;
+    top: 50%;
     left: 12px;
-
+    transform: translateY(-50%);
     transition: fill var(--timing-function);
 }
 
@@ -821,6 +826,9 @@ img {
 .footer .address {
     color: var(--primary-white-color);
 
+    display: block;
+    margin-bottom: 9px;
+    
     font-style: normal;
     font-size: 14px;
     line-height: 1.71;
@@ -830,9 +838,6 @@ img {
     padding: 0;
 }
 
-.footer .address {
-    margin-bottom: 9px;
-}
 
 .footer .link {
     display: inline-block;
@@ -855,10 +860,6 @@ img {
     margin-bottom: 9px;
 }
 
-.footer .address {
-    display: block;
-    padding-right: 13px;
-}
 
 .footer .container {
     display: flex;
@@ -957,6 +958,7 @@ img {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
 
+    color: rgba(255, 255, 255, 0.6);
     background-color: transparent;
 
     outline: transparent;
